--- a/index.html
+++ b/index.html
@@ -195,8 +195,23 @@
 <section class="section">
   <div class="container is-max-desktop">
 
-    <div class="columns is-centered">
 
+    <!-- Method Overview -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Method Overview</h2>
+
+        <div class="content has-text-justified">
+          <p>
+            XXX.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Method Overview -->
+
+
+    <div class="columns is-centered">
       <!-- Visual Effects. -->
       <div class="column">
         <div class="content">
@@ -230,8 +245,8 @@
 
         </div>
       </div>
+      <!--/ Matting. -->
     </div>
-    <!--/ Matting. -->
 
 
     <!-- Related Work -->
